ingress/consert-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: consert-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  tls:
  # This assumes tls-secret exists.
  - secretName: consert-secret
  backend:
    # This assumes frontend exists and routes to healthy endpoints.
    serviceName: frontend
    servicePort: 80                     # Keep all service ports to 80 due to issues around loadbalancer
